upgrade to java 16